{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "MouseInput",
            "id": "1b242d82-6636-4b14-8db0-bfa532b01aa0",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "19ec054d-c00a-485d-a2bc-37ec62c2cdad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "f730c4db-e82d-44da-a04c-464723c94b40",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "79d9e487-0d09-4352-ac4a-d9b7c3704098",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "28fa99de-0b78-4b9d-8921-998289e85682",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc70b81f-5db6-4885-a645-a18bdce9bfd8",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da567ff0-6469-4fbf-b56d-68cf0b264c45",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}